<resources>
    <string name="app_name" translatable="false">YooChat</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_you_need_new_account">Have you need a new account?</string>
    <string name="reset_password">Reset Password ?</string>
    <string name="enter_your_email">Enter Your Email To Received Reset Link.</string>
    <string name="reset_dialog_yes">Yes</string>
    <string name="reset_link_sent">Reset Link Sent To Your Email</string>
    <string name="reset_link_not_sent">Error: Reset Link Is Not Sent</string>
    <string name="reset_dialog_cancel">Cancel</string>
    <string name="select_user">Select User</string>
    <string name="unable_update_token">Unable update token</string>
    <string name="no_user_available">No user available</string>
    <string name="type_message">Type message…</string>
    <string name="signout">Sign out…</string>
    <string name="unable_to_sign_out">Unable to sign out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
</resources>